All unit and integration tests refactored